regulate project structure remove test files

--- a/vue_front_end/QueryTemplate.html
+++ b/vue_front_end/QueryTemplate.html
@@ -62,7 +62,7 @@
 
 
         
-        <script src="GraphQuery.js"></script>
-        <script src="ace_control.js"></script>
+        <script src="js/GraphQuery.js"></script>
+        <script src="js/ace_control.js"></script>
     </body>
 </html>
