--- a/vue_front_end/main.html
+++ b/vue_front_end/main.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <script src ="node_modules/vue/dist/vue.min.js"></script>
+        <script src ="//unpkg.com/vue/dist/vue.js"></script>
         <script src ="node_modules/vue-resource/dist/vue-resource.min.js"></script>
-        <script src="js/index.js"></script>
+        <script src="//unpkg.com/element-ui@2.0.9/lib/index.js"></script>
         <script src="echarts.min.js"></script>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="//unpkg.com/element-ui@2.0.9/lib/theme-chalk/index.css">
 
         <style>
             .el-row {
@@ -22,7 +22,8 @@
     <div id="myVue">
         <el-row :gutter="10">
             <el-col v-for="condition in conditions" :span="4">
-                <el-input placeholder="test" v-model="condition.content" icon="circle-close" :on-icon-click="RemoveCondition">
+                <el-input placeholder="test" v-model="condition.content" suffix-icon="el-icon-circle-close
+                " :on-icon-click="RemoveCondition">
                     <template slot="prepend" v-model="condition.type">{{condition.type}}</template>
                 </el-input>
             </el-col>
@@ -30,7 +31,8 @@
 
         <el-row :gutter="10">
             <el-col v-for="target in targets" :span="4">
-                <el-input placeholder="test" v-model="target.content" icon="circle-close" :on-icon-click="RemoveTarget">
+                <el-input placeholder="test" v-model="target.content" suffix-icon="el-icon-circle-close
+                " :on-icon-click="RemoveTarget">
                     <template slot="prepend" v-model="target.type">{{target.type}}</template>
                 </el-input>
             </el-col>
@@ -47,6 +49,23 @@
                         <div id = "main" style="height:800px"></div>
                     </el-col>
                     <el-col :span="9">
+                        <el-table style="width:100%" height="800">
+                            <el-table-column type="expand">
+                                <template scope="props">
+                                    <div v-for="(value, key) in props.row">
+                                        <p>{{key}}:{{value}}</p>
+                                    </div>
+                                </template>
+                            </el-table-column>
+                            <el-table-column label="Name" :prop="prop_name">
+                            </el-table-column>
+                            <el-table-column label="Name">
+                            </el-table-column>
+                        </el-table>
+                    </el-col>
+                </el-row> -->
+                <el-container>
+                    <el-aside width="200px">
                         <el-table :data="expandable_data" style="width:100%" height="800">
                             <el-table-column type="expand">
                                 <template scope="props">
@@ -58,10 +77,12 @@
                             <el-table-column label="Name" :prop="prop_name">
                             </el-table-column>
                         </el-table>
-                    </el-col>
-                </el-row> -->
-                
-                
+                    </el-aside>
+                    <el-main>
+                        <div id = "main" style="height:800px"></div>
+                    </el-main>
+                </el-container>
+
             </el-tab-pane>
             <el-tab-pane label="Table">
                 <template>
