--- a/vue_front_end/main.html
+++ b/vue_front_end/main.html
@@ -21,19 +21,19 @@
     <div id="fixed" style ="width: auto;height:500px;"></div>
     <div id="myVue">
         <el-row :gutter="10">
-            <el-col v-for="condition in conditions" :span="4">
-                <el-input placeholder="test" v-model="condition.content" suffix-icon="el-icon-circle-close
-                " :on-icon-click="RemoveCondition">
-                    <template slot="prepend" v-model="condition.type">{{condition.type}}</template>
+            <el-col v-for="condition in conditions" :span="5">
+                <el-input placeholder="condition" v-model="condition.content" suffix-icon="el-icon-circle-close
+                " on-icon-click="RemoveCondition">
+                    <template slot="prepend"><div>{{condition.type}}</div></template>
                 </el-input>
             </el-col>
         </el-row>
 
         <el-row :gutter="10">
-            <el-col v-for="target in targets" :span="4">
-                <el-input placeholder="test" v-model="target.content" suffix-icon="el-icon-circle-close
-                " :on-icon-click="RemoveTarget">
-                    <template slot="prepend" v-model="target.type">{{target.type}}</template>
+            <el-col v-for="target in targets" :span="5">
+                <el-input placeholder="target" v-model="target.content" suffix-icon="el-icon-circle-close
+                " on-icon-click="RemoveTarget">
+                    <template slot="prepend"><div>{{target.type}}</div></template>
                 </el-input>
             </el-col>
         </el-row>
@@ -44,28 +44,8 @@
     <div id="resultVue">
         <el-tabs type="border-card">
             <el-tab-pane label="Graph">
-                <!-- <el-row>
-                    <el-col :span="15">
-                        <div id = "main" style="height:800px"></div>
-                    </el-col>
-                    <el-col :span="9">
-                        <el-table style="width:100%" height="800">
-                            <el-table-column type="expand">
-                                <template scope="props">
-                                    <div v-for="(value, key) in props.row">
-                                        <p>{{key}}:{{value}}</p>
-                                    </div>
-                                </template>
-                            </el-table-column>
-                            <el-table-column label="Name" :prop="prop_name">
-                            </el-table-column>
-                            <el-table-column label="Name">
-                            </el-table-column>
-                        </el-table>
-                    </el-col>
-                </el-row> -->
                 <el-container>
-                    <el-aside width="200px">
+                    <el-aside width="30%">
                         <el-table :data="expandable_data" style="width:100%" height="800">
                             <el-table-column type="expand">
                                 <template scope="props">
@@ -86,12 +66,12 @@
             </el-tab-pane>
             <el-tab-pane label="Table">
                 <template>
-                    <!-- <el-table style="width: 100%" height="800" border>
+                    <el-table style="width: 100%" height="800" border>
                         <el-table-column prop="type" label="Type" width="180">
                         </el-table-column>
                         <el-table-column prop="properties" label="Properties">
                         </el-table-column>
-                    </el-table> -->
+                    </el-table>
                 </template>
             </el-tab-pane>
         </el-tabs>
